Updated to Java 25 using OpenRewrite