@@ -24,7 +24,6 @@ import org.slf4j.Logger;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.ZoneId;
@@ -49,7 +48,7 @@ public class StatisticsService {
     }
 
     public DisplayStats getStatsForMostRecent(String location){
-        final Path dir = Paths.get(location);
+        final Path dir = Path.of(location);
         try (Stream<Path> pathStream = Files.list(dir)) {
             final Optional<Path> lastUpdatedSaveGame = pathStream
                     .filter(file -> !Files.isDirectory(file) && file.toString().endsWith(".d2s"))
